# kursa4_8_skypro

./: .coverage  .env.sample  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  apps.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_periodic.py  0003_remove_habit_is_useful.py  0004_alter_habit_action_duration.py  0005_alter_habit_action_duration.py  0006_rename_action_time_for_habit_action_time.py  0007_habit_action_datetime.py
users/: models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py  fillusers.py
users/migrations/: 0001_initial.py  0002_user_tg_nickname.py  0003_user_tg_chat_id.py
